Views Calendar 5.x
==================

Version 2.0 dev
===============

Version 2.0-rc5
===============

- Make sure Devel module doesn't add queries to Calendar Popups.
- #292306 Make sure no error is thrown if $GLOBALS['calendar_stripes'] is empty.
- Make sure database values with empty timezone names get defaulted to use site timezone in calendar handling.
- #288644 Add test for $args in calendar_real_url().
- #292811 From/To arguments should be combined with AND instead of OR.
- Rework the calendar legend to incorporate imported ical node colors as well as internal colors.
- Add helper function calendar_get_node_link() to construct a node link for either an internal or external node.
- #272330 Rework css to add background colors where colors are defined and group colors together in the file.

Version 2.0-rc4
===============

- Add 'All day' themes for use in nodes and calendar psuedo nodes.
- #290826 Fix logic error that was missing date ranges that start before the current period by changing 'AND' to 'OR' in argument filter.
- #268669 Improve logic for splitting multi-day nodes across calendar dates, patch by emok.
- Add new DATE_FORMAT_DATE for date-only format that is used throughout the calendar.

Version 2.0-rc3
===============

- Make sure you can have arguments with summary views preceding the calendar.
- #258176 Make sure mini calendar links includes all other arguments.
- #239594 Make sure ical links with other arguments work correctly.
- #238287 Make sure calendars with other args (like OG) display default view.
- #269920 Fix breadcrumb on year view.
- #238369 Clean up breadcrumb when using calendar with other arguments.
- #282008 Fix back/next links on year view to omit mini links.
- Tweaked the jcalendar popup html and css a bit to keep title from popping out of the box in some themes.
- Bring the 5.2 and 6.2 calendar themes into alignment so both use the same styles and themes, including tableless back/next navigation links and themeable headers.